[gd_scene load_steps=8 format=2]

[ext_resource path="res://JimJamTime/BlackHole.png" type="Texture" id=1]
[ext_resource path="res://ItemChoice.gd" type="Script" id=2]
[ext_resource path="res://JimJamTime/ShantellSans-VariableFont_BNCE,INFM,SPAC,wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://JimJamTime/Snake.png" type="Texture" id=4]
[ext_resource path="res://JimJamTime/Fly.png" type="Texture" id=5]
[ext_resource path="res://JimJamTime/Bubble.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[node name="ItemChoice" type="Node2D"]
script = ExtResource( 2 )

[node name="BlackHole" type="Sprite" parent="."]
position = Vector2( 237, 135 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Label4" type="Label" parent="BlackHole"]
margin_left = -125.0
margin_top = 15.0
margin_right = 489.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 1 )
text = "Portal"

[node name="Portal" type="TextureButton" parent="BlackHole"]
margin_left = -70.0
margin_top = -155.0
margin_right = 135.0
margin_bottom = 35.0

[node name="Bubble" type="Sprite" parent="."]
position = Vector2( 57, 136 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="Label3" type="Label" parent="Bubble"]
margin_left = -255.0
margin_top = -4.99994
margin_right = 359.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 1 )
text = "Score Bubble"

[node name="Bubble" type="TextureButton" parent="Bubble"]
margin_left = -95.0
margin_top = -155.0
margin_right = 110.0
margin_bottom = 35.0001

[node name="Fly" type="Sprite" parent="."]
position = Vector2( 64, 35 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Fly"]
margin_left = -125.0
margin_top = 70.0
margin_right = -85.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
text = "Fly"

[node name="Fly" type="TextureButton" parent="Fly"]
margin_left = -115.0
margin_top = -115.0
margin_right = 90.0001
margin_bottom = 75.0002

[node name="Snake" type="Sprite" parent="."]
position = Vector2( 246, 36 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="Label2" type="Label" parent="Snake"]
margin_left = -145.0
margin_top = 125.0
margin_right = -4.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 1 )
text = "Dino"

[node name="Snake" type="TextureButton" parent="Snake"]
margin_left = -195.0
margin_top = -130.0
margin_right = 80.0
margin_bottom = 180.0

[connection signal="pressed" from="BlackHole/Portal" to="." method="_on_Portal_pressed"]
[connection signal="pressed" from="Bubble/Bubble" to="." method="_on_Bubble_pressed"]
[connection signal="pressed" from="Fly/Fly" to="." method="_on_Fly_pressed"]
[connection signal="pressed" from="Snake/Snake" to="." method="_on_Snake_pressed"]
